--- a/Advanced Data Structures/Codes/.vscode/launch.json
+++ b/Advanced Data Structures/Codes/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Pattern",
+            "request": "launch",
+            "mainClass": "Pattern",
+            "projectName": "Codes_cc4445b4"
+        },
+        {
+            "type": "java",
             "name": "Debug (Launch) - Current File",
             "request": "launch",
             "mainClass": "${file}"
